Correções Turma A e início turma C

--- a/Materias/2S2020/PED_CE342/Turma_A/184528.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/184528.org
@@ -35,3 +35,20 @@
 ** Comentários individuais 
 
 Seus parágrafos de abertura situam bem as principais proposições da escola monetarista bem como sendo uma contraposição ao keynesianismo ortodoxo e fez uma contextualização histórica da perda de relevância desta escola. Adiante, destaca quais são os principais elementos teóricos dessa escola. Apresentou bem os argumentos associados à taxa natural de desemprego, mas poderia ter caprichado mais na caligrafia. Adiante, descreve corretamente o conceito de ilusão monetária, mas incorretamente os determinantes da inflação. Para os monetaristas, o aumento do nível de preços decorre do aumento do estoque de moeda acima da taxa de crescimento do produto e não a ampliação da oferta de trabalho. Em seguida, pontua corretamente que o trade-off entre inflação e desemprego não se verifica no curto prazo. Ao descrever a TQM, não a menciona enquanto uma teoria da demanda por moeda. Em seguida, pontua corretamente algumas das implicações do monetarismo. Vale destacar que o estoque de moeda deve *crescer* a mesma taxa que a taxa de crescimento do PIB e não que ambos estejam no mesmo nível. Além disso, a política monetária seria capaz de reduzir a taxa de desemprego para além da natural (essa sim próxima da taxa de pleno emprego), mas as custas de níveis de inflação crescentes na medida que a ilusão monetária não se esgota.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
