--- a/Materias/2S2020/PED_CE342/Turma_A/201326.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/201326.org
@@ -66,3 +66,20 @@ Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comp
 ** Comentários individuais
 
 Foram includos no documento enviado. 
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
