--- a/Materias/2S2020/PED_CE342/Turma_A/212900.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/212900.org
@@ -78,3 +78,20 @@ Adiante é mencionada a retomada da TQM pelo monetarismo. Cabe aqui a menção d
 ** Comentários individuais
 
 Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingindo minimamente
+:DESENVOLVIMENTO: Atingindo minimamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
