--- a/Materias/2S2020/PED_CE342/Turma_A/222315.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/222315.org
@@ -50,3 +50,20 @@ Sua contextualização da escola monetarista esta bem colocada. No entanto, pode
 ** Comentários individuais
 
    Foram includos no documento enviado. Vale destacar que a atividade foi entregue em pdf, não seguindo, portanto, as instruções.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
