--- a/Materias/2S2020/PED_CE342/Turma_A/222615.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/222615.org
@@ -68,3 +68,20 @@ Em seu parágrafo de abertura, corretamente contextualizou o monetarismo enquant
 ** Comentários individuais
 
 Foram includos no documento enviado. 
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
