--- a/Materias/2S2020/PED_CE342/Turma_A/232395.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/232395.org
@@ -72,3 +72,20 @@ Também é colocada a importância dessa escola para as posteriores e como dão 
 
    Foram includos no documento enviado.
 
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingindo minimamente
+:ARGUMENTO: Atingindo minimamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingindo minimamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
