--- a/Materias/2S2020/PED_CE342/Turma_A/233747.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/233747.org
@@ -76,3 +76,20 @@ Mais ao fim, foi colocada algumas críticas às hipóteses da TQM. No entanto, n
 
    Foram includos no documento enviado.
 
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
