--- a/Materias/2S2020/PED_CE342/Turma_A/237618.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/237618.org
@@ -74,3 +74,20 @@ No parágrafo final, você entra em alguns debates sem as devidas mediações. P
 ** Comentários individuais
 
 Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
