--- a/Materias/2S2020/PED_CE342/Turma_A/240317.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/240317.org
@@ -51,3 +51,20 @@ Em seu parágrafo de abertura, estão alguns dos pontos centrais da escola monet
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. Pontua-se que essa resenha apresentou 13 trechos sinalizados como plágio pelo google classroom.
