--- a/Materias/2S2020/PED_CE342/Turma_A/245459.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/245459.org
@@ -50,3 +50,20 @@ Seu parágrafo de abertura deixa claro que o monetarismo é um contraponto ao Ke
 ** Comentários individuais
 
    Foram includos no documento enviado. Vale pontuar que passou 15 palavras do limite estipulado. 
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
