--- a/Materias/2S2020/PED_CE342/Turma_A/255207.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/255207.org
@@ -43,3 +43,20 @@ Quando apresentou a curva de Phillips com expectativas, incorreu em uma imprecis
 Ao explicar a curva de Phillips aceleraciosnita, confunde resultado com hipótese. Os monetaristas não partem da hipótese de que é precisa inflação à taxas maiores para que a taxa de desemprego fique abaixo da natural. Isso que descrevi é a implicação (decorrente de um conjunto de outros hipóteses, dentre elas às da TQM).
 
 Ao descrever as recomendações de política econômica, pontua corretamente os pontos contrários a discricionariedade. No entanto, não há menção sobre as regras monetárias propostas. No final da sua resenha é apresentada a TQM. Dada a importância desta teoria e suas hipóteses relacionadas, poderia ter sido antecipada. Note que a partir dela é possível descrever o porquê de variações no estoque de moeda implicam variações na inflação.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
