--- a/Materias/2S2020/PED_CE342/Turma_C/091108.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/091108.org
@@ -52,3 +52,20 @@ No início da resenha, pontuou a principal proposição do monetarismo, bem como
 ** Comentários individuais
 
 Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
