--- a/Materias/2S2020/PED_CE342/Turma_C/232568.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/232568.org
@@ -52,3 +52,20 @@ Por fim, vale destacar que existem muitos Miltons, mas M. Friedman apenas um. Ev
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
