--- a/Materias/2S2020/PED_CE342/Turma_C/257748.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257748.org
@@ -60,3 +60,20 @@ No parágrafo final, é corretamente colocada recomendação de política econô
 ** Comentários individuais
 
 Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
