--- a/Materias/2S2020/PED_CE342/Turma_A/187323.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/187323.org
@@ -50,3 +50,20 @@ Seu parágrafo de abertura é uma boa forma de introduzir o problema analisado p
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
