--- a/Materias/2S2020/PED_CE342/Turma_A/213360.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/213360.org
@@ -64,3 +64,20 @@ Mais ao fim, você apresenta a Teoria Quantitativa da Moeda (TQM). No entanto, n
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
