--- a/Materias/2S2020/PED_CE342/Turma_A/231302.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/231302.org
@@ -52,3 +52,20 @@ Em seguida, expões corretamente a TQM enquanto uma teoria da demanda por moeda.
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
