--- a/Materias/2S2020/PED_CE342/Turma_A/233335.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/233335.org
@@ -69,3 +69,20 @@ No parágrafo seguinte é afirmado que a moeda é neutra no longo prazo. No enta
 ** Comentários individuais
 
 Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingindo minimamente
+:CONCLUSAO: Atingindo minimamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
