--- a/Materias/2S2020/PED_CE342/Turma_A/238414.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/238414.org
@@ -72,3 +72,20 @@ No parágrafo de abertura, corretamente coloca o monetarismo enquanto contrapont
 ** Comentários individuais
 
 Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
