--- a/Materias/2S2020/PED_CE342/Turma_A/244321.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/244321.org
@@ -51,3 +51,20 @@ Em seus parágrafos iniciais, destacou os elementos centrais do monetarismo. Ape
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
