--- a/Materias/2S2020/PED_CE342/Turma_A/244379.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/244379.org
@@ -51,3 +51,20 @@ Em seus parágrafos iniciais, deu muita ênfase à taxa natural de desemprego. S
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO:
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
