--- a/Materias/2S2020/PED_CE342/Turma_C/216397.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/216397.org
@@ -45,9 +45,26 @@ Foi pontuada a importância da retomada da TQM para o monetarismo. Adiante é de
   :DESENVOLVIMENTO: Atingindo minimamente
   :CONCLUSAO: Atingindo minimamente
   :CLAREZA:  Atingido parcialmente
-  :NOTA:     Atingido totalmente
+  :NOTA:     Não atingido
   :END:
 
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
