Fim correções resenhas. Início relatórios A e C

--- a/Materias/2S2020/PED_CE342/Turma_A/156242.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/156242.org
@@ -68,3 +68,20 @@ Não foi entregue.
 ** Comentários individuais
 
 Foram includos no documento enviado. 
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
