--- a/Materias/2S2020/PED_CE342/Turma_C/158425.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/158425.org
@@ -52,3 +52,20 @@ Por fim, a discussão da função consumo e sua relação com a hipótese de vel
 :CLAREZA:  Atingido satisfatoriamente
 :NOTA:     Atingido parcialmente
   :END:
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
