--- a/Materias/2S2020/PED_CE342/Turma_C/159866.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/159866.org
@@ -50,3 +50,20 @@ O conceito de taxa natural de desemprego é corretamente apresentado. Poderia ap
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
