--- a/Materias/2S2020/PED_CE342/Turma_C/177964.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/177964.org
@@ -51,3 +51,20 @@ Elenca corretamente os principais elementos da escola monetarista e o faz retoma
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
