--- a/Materias/2S2020/PED_CE342/Turma_C/197724.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/197724.org
@@ -66,3 +66,20 @@ No início da resenha são apresentados alguns dos conceitos da escola monetaris
 ** Comentários individuais
 
 Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingindo minimamente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
