--- a/Materias/2S2020/PED_CE342/Turma_C/206806.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/206806.org
@@ -35,3 +35,20 @@
 ** Comentários individuais 
 
 Inicia a resenha fazendo uma contextualização do autor do texto a ser resenhado. Em seguida, pontua corretamente a principal implicação de política econômica monetarista e sua forma. No parágrafo seguinte pontua as principais hipóteses monetaristas em que não mencionou a TQM. Adiante, descreve corretamente o conceito de taxa natural de desemprego. Em seguida, destaca algumas das medidas que podem ser adotadas para que tal taxa possa ser menor (em especial, medidas supply-side). Mais a frente, faz uma contextualização histórica da curva de Phillips e pontua que na ausência de distúrbios monetários, a taxa de desemprego efetiva é igual a natural. No entanto, não descreve a ilusão monetária. Inicia o parágrafo seguinte elencando uma implicação da TQM, mas não há menção a esse conceito. Em seguida, começa descrever o conceito e implicações da ilusão monetária. Ao fim, destaca a hipótese aceleracionista. Vale ressaltar que não retomou a proposição do regime de regras monetárias e, de modo geral, não explicou os determinantes da inflação.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingindo minimamente
+:ARGUMENTO: Atingindo minimamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingindo minimamente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingindo minimamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
