--- a/Materias/2S2020/PED_CE342/Turma_C/199967.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/199967.org
@@ -65,3 +65,20 @@ No início de sua resenha, apontou corretamente a principal implicação econôm
 :CLAREZA:  Atingido totalmente
 :NOTA:     Atingido satisfatoriamente
   :END:
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
