--- a/Materias/2S2020/PED_CE342/Turma_C/244207.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/244207.org
@@ -50,3 +50,20 @@ Corretamente pontuou que no monetarismo a estabilidade de nível de preços pres
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido totalmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
