--- a/Materias/2S2020/PED_CE342/Turma_C/257932.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257932.org
@@ -51,3 +51,20 @@ Em seu parágrafo de abertura, pontua corretamente a principal proposição de p
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 4: Regime de Metas para Inflação                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 4
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
